# Landing

./: .dockerignore  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  CONVENTIONS.md  DOCKER.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  transactions_review.md
.claude/: settings.local.json
.github/workflows/: build.yml  checks.yml  deploy.yml
Landing/: asgi.py  constants.py  urls.py  wsgi.py
Landing/settings/: base.py  dev.py  prod.py
accounts/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
scripts/: run.sh
transactions/: admin.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
users/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_social_fields.py  0003_remove_is_admin.py  0004_alter_user_phone.py  0005_user_is_email_verified.py
